tests/baselines/reference/invalidVoidValues.errors.txt
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(2,1): error TS2322: Type 'number' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(3,1): error TS2322: Type 'string' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(4,1): error TS2322: Type 'boolean' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(7,1): error TS2322: Type 'typeof E' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(8,1): error TS2322: Type 'E' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(12,1): error TS2322: Type 'C' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(16,1): error TS2322: Type 'I' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(18,1): error TS2322: Type '{ f(): void; }' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(21,1): error TS2322: Type 'typeof M' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(24,5): error TS2322: Type 'T' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.ts(26,5): error TS2322: Type '<T>(a: T) => void' is not assignable to type 'void'.


==== tests/cases/conformance/types/primitives/void/invalidVoidValues.ts (11 errors) ====
    var x: void;
    x = 1;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
    x = '';
    ~
!!! error TS2322: Type 'string' is not assignable to type 'void'.
    x = true;
    ~
!!! error TS2322: Type 'boolean' is not assignable to type 'void'.
    
    enum E { A }
    x = E;
    ~
!!! error TS2322: Type 'typeof E' is not assignable to type 'void'.
    x = E.A;
    ~
!!! error TS2322: Type 'E' is not assignable to type 'void'.
    
    class C { foo: string }
    var a: C;
    x = a;
    ~
!!! error TS2322: Type 'C' is not assignable to type 'void'.
    
    interface I { foo: string }
    var b: I;
    x = b;
    ~
!!! error TS2322: Type 'I' is not assignable to type 'void'.
    
    x = { f() {} }
    ~
!!! error TS2322: Type '{ f(): void; }' is not assignable to type 'void'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! error TS2322: Type 'typeof M' is not assignable to type 'void'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! error TS2322: Type 'T' is not assignable to type 'void'.
    }
    x = f;
        ~
!!! error TS2322: Type '<T>(a: T) => void' is not assignable to type 'void'.
!!! related TS6212 tests/cases/conformance/types/primitives/void/invalidVoidValues.ts:26:5: Did you mean to call this expression?